infra/k8s-dev/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: docker.pkg.github.com/tcd1980/shop/client
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
  namespace: development
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
