infra/k8s-dev/logs-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-mongo-depl
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs-mongo
  template:
    metadata:
      labels:
        app: logs-mongo
    spec:
      containers:
        - name: logs-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: logs-mongo-srv
  namespace: development
spec:
  selector:
    app: logs-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
