infra/k8s-dev/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: docker.pkg.github.com/tcd1980/shop/products
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
  namespace: development
spec:
  selector:
    app: products
  ports:
    - name: products
      protocol: TCP
      port: 3000
      targetPort: 3000
