infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: shop-dev.ramsy.dev
      http:
        paths:
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/categories/?(.*)
            backend:
              serviceName: categories-srv
              servicePort: 3000
          - path: /api/products/?(.*)
            backend:
              serviceName: products-srv
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000
          - path: /api/upload/?(.*)
            backend:
              serviceName: media-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
    - host: api-dev.ramsy.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: api-srv
              servicePort: 3000
